# code-charter

./: .eslintcache  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  eslint.config.mjs  go.mod  go.sum  package-lock.json  package.json  requirements.txt  tsconfig.json  turbo.json
.claude/: settings.json
.claude/agents/: drift-reconciler.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backlog/: config.yml
backlog/completed/: task-11 - Codebase-simplification-and-dead-code-cleanup.md  task-13 - Migrate-from-ariadnejs-v0.5.x-to-v0.8.0.md  task-14.1 - Fix-existing-broken-tests-and-delete-dead-code.md  task-15 - Replace-RegexDocstringProvider-with-ariadne-docstrings-everywhere.md  task-16 - Fix-React-Flow-layout-and-correctness-bugs.md  task-19 - Restructure-UI-package-file-layout-for-clarity-and-modularity.md  (+2 more)
backlog/docs/: AI Code-to-Flowchart Generator.md  vision.md  (+10 more)
charter/: call_graph_to_diagram.py  call_graph_to_summary.py  clustering.py  models.py
charter-ui/: package-lock.json  package.json
cmd/: main.go  main_test.go
code-charter-vscode/: .eslintrc.json  .gitignore  CHANGELOG.md  Planning.md  README.md  copy-assets.js  index.scip  package-lock.json  package.json  tsconfig.json
dev/: build_call_graph_image.sh  list_python_packages.sh
docs/: DEBUGGING.md  DEVELOPMENT.md  task-27.1-subtask-map.architecture.mmd  task-27.1-subtask-map.critical-path.mmd  task-27.1-subtask-map.html  task-27.1-subtask-map.seam.mmd
finetuning/: README.md  pyproject.toml
finetuning/src/finetuning/: __init__.py
scripts/: cluster_pipeline.mjs
(+314 files in other folders)
