[project]
name = "finetuning"
version = "0.1.0"
description = "Finetune models for Code Charter"
authors = [
    { name = "crjfisher", email = "CRJFisher@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/finetuning"]
